--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Site Web</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Bienvenue sur mon site web !</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Accueil</a></li>
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="home">
+        <h2>Accueil</h2>
+        <p>Ceci est un exemple de site web créé avec HTML.</p>
+    </section>
+
+    <section id="about">
+        <h2>À propos</h2>
+        <p>Cette section parle de moi ou de mon projet.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Voici comment me contacter.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Mon Site Web. Tous droits réservés.</p>
+    </footer>
+</body>
+  </html>
